--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ section .title::after{
     justify-content: space-between;
 }
 .navbar .logo a{
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-size: 35px;
     font-weight: 600;
 }
@@ -113,7 +113,7 @@ section .title::after{
 }
 .navbar .menu li a{
     display: block;
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
